--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
