--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.11",
     "clsx": "^2.0.0",
-    "next": "14.0.3",
+    "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3",
     "typescript": "^5"
   }
 }
