--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.11",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.14",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
